tests/errors/try_without_catch.drast
// # TEST: try requires following catch
// # EXPECT: error
// # ERROR_CONTAINS: expected catch

main, int
	try
		value = 1
	return 0
